[metadata]
name = infamous-fantasy
version = 0.0.0
description = Data insights for the inFAMOUS fantasy leagues
long_description = file: README.md
author = Broderick Turner
author_email = broderickturner92@gmail.com
url = https://github.com/unclebrod/infamous-fantasy
license = MIT
license_file = LICENSE.md
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
python_requires = ~=3.8
packages = find:
install_requires =
    pandas>=1.4
    plotly>=5.8
    python-dotenv>=0.20
    requests>=2.27
    scikit-learn>=1.1.2
    streamlit>=1.12
    watchdog>=2.1
